# junkyard

./: LICENSE
asm/practice/: console.asm  infinite_loop.asm  sum.asm
aws/ec2/: README.md
c/graph/: .gitignore  CMakeLists.txt  graph.c  graph.h
config/: .ideavimrc  .zshrc  vimium
config/alacritty/: alacritty.yml
config/i3/: config
config/i3-autodisplay/: config.yml
config/nvim/: init.lua  lazy-lock.json
config/picom/: picom.conf
cpp/alloc/: CMakeLists.txt  build.sh  main.c  run.sh
cpp/alloc/include/: alloc.h  types.h
cpp/alloc/src/: alloc.cpp  main.cpp
cpp/comboTetris/: CMakeLists.txt  build.sh  run.sh
cpp/comboTetris/include/: board.h  config.h  entity.h  game.h  renderer.h
cpp/comboTetris/src/: board.cpp  game.cpp  renderer.cpp
cpp/map/: CMakeLists.txt  ]  build.sh  map.h  murmur3.cpp  murmur3.h  run.sh  types.h
cpp/map/test/: CMakeLists.txt  main.cpp
cpp/mmap/: .gitignore  Makefile  alloc-file.c  alloc-mem  alloc-mem.c  test-file.txt
cpp/raylibBox2d/: .gitignore  CMakeLists.txt
cpp/transpose/: CMakeLists.txt  transpose.cpp
docker/kafka/: consumer.py  producer.py
docker/neo4j/: docker-compose.yml
go/cache/: main.go
go/caffetin/: go.mod  main.go
haproxy/: simple_server.cfg
haproxy/server/: README.md  index.js  package.json
haproxy/simple_server/: README.md  index.js
haskell/practice/: main.hs
js/gradient_arc/: index.html  main.js  style.css  widget.js
kotlin/akka-actor-model/: pom.xml
kotlin/netty/: pom.xml
kubernetes/: README.md  deployment.yml  env.yml  persistent-volume-claim.yml  persistent-volumes.yml  service.yml
kubernetes/networking/: Kubernetes Auth.postman_collection.json  docker-compose.yml
linux/: README.md
linux/scripts/: .gitignore  (+1 more)
networking/: README.md
nvim/: init.lua
postgreSQL/: README.md
(+121 files in other folders)
